--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  name: "ec-europa/platform-deploy",
-  type: "drupal-core"
+  "name": "ec-europa/platform-deploy",
+  "type": "drupal-core"
 }
 
